# cannectivity

./: .checkpatch.conf  .editorconfig  .gitignore  99-cannectivity.rules  CMakeLists.txt  CODE_OF_CONDUCT.md  Kconfig  README.md  SECURITY.md  west.yml
.github/: dependabot.yml
app/: CMakeLists.txt  Kconfig  Kconfig.sysbuild  VERSION  app.overlay  prj.conf  prj_release.conf  prj_usbd_next.conf  prj_usbd_next_release.conf  sample.yaml  sysbuild-dfu.conf  sysbuild.cmake  sysbuild.conf
app/boards/: arduino_giga_r1_stm32h747xx_m7.overlay  canbardo_same70n20b.conf  canbardo_same70n20b.overlay  canbardo_same70n20b_legacy.conf  canbardo_same70n20b_legacy_release.conf  canbardo_same70n20b_usbd_next.conf  canbridge_g473_stm32g473xx.overlay  candlelight_stm32f072xb.conf  candlelight_stm32f072xb.overlay  candlelightfd_stm32g0b1xx.overlay  candlelightfd_stm32g0b1xx_dual.conf  candlelightfd_stm32g0b1xx_dual.overlay  candlelightfd_stm32g0b1xx_dual_usbd_next.conf  entree.overlay  entree_dual.overlay  frdm_mcxn947_mcxn947_cpu0.conf  frdm_mcxn947_mcxn947_cpu0.overlay  lpcxpresso55s16_lpc55s16.overlay  mks_canable_v10_stm32f072xb.conf  mks_canable_v10_stm32f072xb.overlay  mks_canable_v20_stm32g431xx.conf  mks_canable_v20_stm32g431xx.overlay  native_sim.conf  native_sim.overlay  native_sim_legacy.overlay  native_sim_legacy_release.overlay  native_sim_native_64.conf  native_sim_native_64.overlay  native_sim_native_64_legacy.overlay  native_sim_native_64_legacy_release.overlay  native_sim_native_64_usbd_next.overlay  nucleo_g0b1re.overlay  nucleo_h723zg.overlay  nucleo_h723zg_stm32h723xx.overlay  nucleo_h745zi_q.overlay  rh02_plus_2026_stm32g431xx.conf  rh02_plus_2026_stm32g431xx.overlay  rh02_stm32f072xb.conf  rh02_stm32f072xb.overlay  ucan_stm32f072xb.conf  (+10 more)
app/boards/makerbase/mks_canable_v20/: mks_canable_v20.conf  mks_canable_v20.overlay
app/dts/bindings/: cannectivity.yaml
app/src/: cannectivity.h  dfu.c  led.c  main.c  termination.c  timestamp-counter.c  timestamp-uptime.c  timestamp.c  usb.c
app/sysbuild/mcuboot/: app.overlay  prj.conf
app/sysbuild/mcuboot/boards/: canbardo_same70n20b.conf  canbardo_same70n20b_legacy_release.conf  canbardo_same70n20b_usbd_next.conf  frdm_k64f_mk64f12.conf  frdm_k64f_mk64f12_legacy_release.conf  frdm_k64f_mk64f12_usbd_next.conf
cmake/: cannectivity.cmake
doc/: Makefile  building.rst  conf.py  index.rst  module.rst  porting.rst  requirements.in  requirements.txt
scripts/: cannectivity.conf  cannectivity.conf.stop  requirements-run-test.txt  requirements.txt  run-host-tests.sh
(+55 files in other folders)
